# phase1-flag-the-event

./: .env.example  .gitignore  ADDING_MODELS.md  ANALYSIS_REPORT_200_EVENTS.md  BIKE_CLASSIFICATION_STRATEGY.md  BIKE_FLAGGING_IMPLEMENTATION_GUIDE.md  DASHBOARD_GUIDE.md  PHASE1_REPORT.md  PHASE2_REPORT.md  PROMPT_ITERATION_LOG.md  QUICK_REFERENCE_BIKE_CLASSIFICATION.md  README.md  SETUP_INSTRUCTIONS.md  UNCERTAIN_ANALYSIS.md  bike_related_gold_dataset_A_to_F.csv  generate_report_for_run.py  pyproject.toml  run_dashboard.sh
bikeclf/: __init__.py  config.py  gemini_client.py  io.py  markdown_report.py  metrics.py  schema.py
bikeclf/phase1/: __init__.py  dashboard.py  eval.py  prompt_loader.py
bikeclf/phase2/: __init__.py  config.py  eval.py  gemini_client.py  io.py  markdown_report.py  metrics.py  prompt_loader.py
config/: supabase_config.py
data/: supabase_test_200.csv  supabase_test_200_filtered.csv
migrations/: add_bike_classification_columns.sql  update_bike_classifications.sql
phase2/: PHASE2_PLAN.md  README.md  phase2-eval-set.jsonl
phase2/prompts/: v001.md
prompts/phase1/: README.md  v001.md  v002.md  v003.md  v004.md  v005.md  v006.md
scripts/: classify_events.py  prefilter_events.py  run_supabase_phase2_pipeline.py  run_supabase_pipeline.py  update_supabase_results.py
tests/: __init__.py  test_metrics.py  test_schema.py
tmp_analysis/: analyze.py  compare_report.json  compare_runs.py  report.json
